fix: update link color in ContactResponses.css for better visibility

--- a/src/pages/css/ContactResponses.css
+++ b/src/pages/css/ContactResponses.css
@@ -4,5 +4,5 @@
 }
 
 .table a {
-    color: #c3e2ff;
+    color: #0084ff;
 }
